# BFIA_Rewrite

./: .env  .gitignore  Cargo.toml
backend/: Cargo.toml
backend/src/: lib.rs
css/: dashboard.css  dashboard.css.map  home.css  home.css.map  home.js  home.scss  index.css  index.css.map  index.scss  login.css  login.css.map  login.scss  register.css  register.css.map  register.scss
scripts/: styles.js
src/: main.rs  structs.rs
templates/: dashboard.hbs  home.hbs  index.hbs  login.hbs  register.hbs
