[package]
name = "rocketproj"
version = "0.1.0"
authors = ["tsu_katana <daviddlon4949@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.tokio]
version = "0.2"
features = ["full"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["secrets"]

[dependencies.rocket_contrib]
git = "https://github.com/SergioBenitez/Rocket"
branch = "master"
features = ["handlebars_templates"]

[dependencies.sqlx]
git = "https://github.com/lumeohq/sqlx"
branch = "tokio-1.0"
default-features = false
features = ["runtime-tokio-rustls", "macros", "postgres"]