[package]
name = "backend"
version = "0.1.0"
authors = ["tsu_katana <daviddlon4949@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3"
#lazy_static = "1.4.0"
wasm-bindgen-futures = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
    'CanvasRenderingContext2d',
    'CssStyleDeclaration',
    'Document',
    'DomTokenList',
    'DomRect',
    'Element',
    'EventTarget',
    'HtmlCanvasElement',
    'HtmlElement',
    'MouseEvent',
    'Node',
    'Window',
    'console',
    'Location',
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'HtmlImageElement',
]

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
